<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffafafa"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/tab_text_selected" >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableLeft="@drawable/time"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/title_activity_ht"
            android:textColor="#ffffffff"
            android:textSize="18.0dip"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="15dp"
        android:background="#fffafafa" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/baby_birthday" />

        <TextView
            android:id="@+id/center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/title_activity_ht_center"
            android:textColor="#ffffffff"
            android:textSize="15.0dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="15dp"
        android:background="#fffafafa" >

        <TimePicker
            android:id="@+id/htTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/timeEditText"
            android:layout_below="@+id/timeEditText"
            android:layout_marginTop="14dp" 
            />

        <com.zjkj.yuerbao.common.widget.ClearEditText
            android:id="@+id/timeEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/time"
            android:drawablePadding="7dip"
            android:ems="12"
            android:hint="@string/hopetime_timeEditText_hint"
            android:singleLine="true" />


    </RelativeLayout>

    <Button
        android:id="@+id/ok"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:onClick="saveHopeTime"
        android:text="@string/btn_next"
        android:textSize="18.0dip" />

</RelativeLayout>