<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffafafa"
    android:orientation="vertical"
    tools:context="com.zjkj.yuerbao.start.bind.YuchanDate" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@color/tab_text_selected" >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/title_activity_hc"
            android:textColor="#ffffffff"
            android:textSize="18.0dip"
            android:drawableLeft="@drawable/period"
            android:drawablePadding="8dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/title_text"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/save"
            android:textColor="#ffffffff"
            android:textSize="15.0dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="38dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="15dp"
        android:background="#fffafafa" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/baby_birthday" />

        <TextView
            android:id="@+id/center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/title_activity_hc_center"
            android:textColor="#ffffffff"
            android:textSize="15.0dip" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout2"
        android:background="#fffafafa" >

        <DatePicker
            android:id="@+id/bbDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#ffffffff"
            />

            <com.zjkj.yuerbao.common.widget.ClearEditText
            android:id="@+id/dateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ems="12"
            android:drawableLeft="@drawable/icon_date"
            android:drawablePadding="7dip"
            android:hint="@string/yuchang_dateEditText_hint"
            android:singleLine="true"
           >
            <requestFocus />
        </com.zjkj.yuerbao.common.widget.ClearEditText>

        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout4"
        android:layout_marginTop="15dp"
        android:background="#fffafafa" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/childbirth" />
    </RelativeLayout>

</RelativeLayout>