<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fffafafa"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:background="@color/tab_text_selected" >

        <TextView
            android:id="@+id/login_cancle"
            android:layout_width="wrap_content"
            android:layout_height="35.0dip"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8.0dip"
            android:gravity="center"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:text="@string/loginCancle"
            android:textColor="#ffffffff"
            android:textSize="14.0dip"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/center_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/loginTitle"
            android:textColor="#ffffffff"
            android:textSize="18.0dip"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="58.0dip"
                android:layout_height="wrap_content"
                android:text="@string/loginUser"
                android:textColor="#ff404040"
                android:textSize="16.0dip" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip" >

                <EditText
                    android:id="@+id/LoginName"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="10.0dip"
                    android:paddingRight="30.0dip"
                    android:singleLine="true"
                    android:textSize="16.0dip" />

                <ImageView
                    android:id="@+id/login_name_clear_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="5.0dip"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/usernameerrorid"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="58.0dip"
            android:text="@string/loginError"
            android:textColor="#ffff0000"
            android:textSize="13.0dip"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13.0dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="58.0dip"
                android:layout_height="wrap_content"
                android:text="@string/loginPwd"
                android:textColor="#ff404040"
                android:textSize="16.0dip" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="40.0dip" >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="40.0dip"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:paddingLeft="10.0dip"
                    android:singleLine="true"
                    android:textSize="16.0dip" />

                <ImageView
                    android:id="@+id/clear_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="5.0dip"
                    android:visibility="gone" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/passworderrorid"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="58.0dip"
            android:text="@string/loginError"
            android:textColor="#ffff0000"
            android:textSize="13.0dip"
            android:visibility="gone" />

        <Button
            android:id="@+id/BtnMenulogin"
            android:layout_width="200.0dip"
            android:layout_height="42.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12.0dip"
            android:layout_marginTop="12.0dip"
            android:text="@string/loginBtnText"
            android:textSize="18.0dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45.0dip" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView1"
                android:layout_alignBottom="@+id/textView1"
                android:layout_centerHorizontal="true"
                android:text="     |"
                android:textColor="#ff404040"
                android:textSize="16.0dip" />

            <TextView
                android:layout_width="75.0dip"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/TextView01"
                android:layout_alignBottom="@+id/TextView01"
                android:layout_toRightOf="@+id/TextView01"
                android:text="找回密码"
                android:textColor="#ff404040"
                android:textSize="16.0dip" />

            <TextView
                android:id="@+id/regText"
                android:layout_width="75.0dip"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/TextView01"
                android:text="注册账号"
                android:textColor="#ff404040"
                android:textSize="16.0dip" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="20dip"
            android:layout_marginBottom="20dip" >

            <View
                android:id="@+id/View1"
                android:layout_width="110dp"
                android:layout_height="1px"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:background="#000000" >
            </View>

            <View
                android:id="@+id/View2"
                android:layout_width="110dp"
                android:layout_height="1px"
                android:layout_centerInParent="true"
                android:layout_toRightOf="@+id/TextView1"
                android:background="#000000" >
            </View>

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="  一键登录"
                android:textColor="#ff404040"
                android:textSize="16.0dip" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dip" >

            <ImageView
                android:id="@+id/weiboImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="33dp"
                android:src="@drawable/login_sina_weibo_img" />

            <ImageView
                android:id="@+id/qqImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/login_qq_img" />

            <ImageView
                android:id="@+id/WXLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="36dp"
                android:src="@drawable/login_weichat_img" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>